--- a/src/pages/Homepage/HomePage.css
+++ b/src/pages/Homepage/HomePage.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: start;
   height: 100vh;
+  position: relative;
 }
 
 .HomePageTitle {
@@ -55,11 +56,21 @@
   width: 250px;
 }
 
+.createEmployee form input[type="submit"] {
+  cursor: pointer;
+}
+
+.createEmployee form input[type="date"] {
+  cursor: pointer;
+}
+
 .createEmployee form select {
   padding: 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
   width: 250px;
+  cursor: pointer;
+  background: rgb(236, 236, 236);
 }
 
 .createEmployee form select option {
@@ -68,4 +79,46 @@
   min-height: 1.2em;
   padding: 0px 2px 1px;
   white-space: nowrap;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25px;
+  position: relative;
+}
+
+.modal-content span {
+  cursor: pointer;
+  margin-left: auto;
+  font-size: 25px;
+  font-weight: bold;
+  top: 5px;
+  right: 15px;
+  position: absolute;
+}
+
+.modal-content p {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
