--- a/src/components/Selector/Selector.css
+++ b/src/components/Selector/Selector.css
@@ -1,10 +1,11 @@
 .createEmployee form select {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 250px;
+  border: 1px solid #121212;
+  width: 100%;
   cursor: pointer;
-  background: rgb(236, 236, 236);
+  background: #1f1f1f;
+  color: white;
 }
 
 .createEmployee form select option {
