--- a/src/pages/Homepage/HomePage.css
+++ b/src/pages/Homepage/HomePage.css
@@ -5,10 +5,20 @@
   justify-content: start;
   height: 100vh;
   position: relative;
+  background: #121212;
 }
 
 .HomePageTitle {
   font-size: 1.5rem;
+}
+
+.HomePageTitle h1 {
+  margin-top: 20px;
+  font-weight: bold;
+  color: #8b8b8b;
+  text-align: center;
+  margin-bottom: 1rem;
+  font-family: "Raleway";
 }
 
 .HomePageContent {
@@ -19,15 +29,40 @@
   margin-bottom: 1rem;
 }
 
+.HomePageContent a {
+  background: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  cursor: pointer;
+  font-family: "Montserrat";
+}
+
 .createEmployee {
+  margin-top: 20px;
+  background: #282828;
+  padding: 0 20px 10px 20px;
+  border-radius: 25px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.createEmployee h2 {
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: "Montserrat";
+  color: white;
 }
 
 .createEmployee form {
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
   min-width: 200px;
 }
 
@@ -38,6 +73,8 @@
   justify-content: center;
   gap: 5px;
   width: 100%;
+  font-family: "Inter";
+  color: white;
 }
 
 .createEmployee form fieldset {
@@ -45,18 +82,49 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  width: 250px;
+  gap: 10px;
+  width: 350px;
+  border: none;
+  background: #3f3f3f;
+}
+
+.createEmployee form fieldset legend {
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: "Raleway";
+  color: white;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .createEmployee form input[type="text"],
 input[type="number"] {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 250px;
+  border: 1px solid #383838;
+  width: 90%;
+  font-family: "Roboto";
+  font-size: 14px;
+  background: #585858;
+  color: white;
 }
 
 .createEmployee form input[type="submit"] {
   cursor: pointer;
+  width: 250px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #575757;
+  color: white;
+}
+
+.createEmployee form input[type="submit"]:hover {
+  background: #3f3f3f;
+}
+
+.createEmployee form input:focus {
+  outline: none;
+  border: 1px solid #000;
 }
