--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,22 +7,25 @@
   height: 100%;
   overflow: auto;
   background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(7px);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #282828;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%;
+  width: 40%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 25px;
   position: relative;
+  overflow: hidden;
 }
 
 .modal-content span {
@@ -33,9 +36,46 @@
   top: 5px;
   right: 15px;
   position: absolute;
+  color: white;
 }
 
-.modal-content p {
+.title {
+  all: unset;
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  color: white;
+  font-family: "Raleway";
+  padding-top: 20px;
+  font-weight: bold;
+}
+
+.commentary {
+  all: unset;
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 5px 0 20px 0;
+}
+
+.timer-bar {
+  width: 100%;
+  height: 10px;
+  background: #383838;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+}
+
+.timer-bar-fill {
+  width: 0;
+  height: 100%;
+  background: rgb(255, 214, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 214, 255, 1) 0%,
+    rgba(200, 182, 255, 1) 50%,
+    rgba(187, 208, 255, 1) 100%
+  );
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  filter: blur(0.5px);
 }
