--- a/src/components/Selector/Selector.css
+++ b/src/components/Selector/Selector.css
@@ -14,6 +14,7 @@
   min-height: 1.2em;
   padding: 0px 2px 1px;
   white-space: nowrap;
+  font-size: 15px;
 }
 
 .createEmployee form select:focus {
