--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(7px);
@@ -14,11 +14,120 @@
   justify-content: center;
 }
 
+.modal.hide {
+  animation: modal-disappear 1s;
+}
+
+.modal.top {
+  align-items: flex-start;
+}
+
+.modal.bottom {
+  align-items: flex-end;
+}
+
+.modal.corner-top-left {
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.modal.corner-top-right {
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
+.modal.corner-bottom-left {
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+
+.modal.corner-bottom-right {
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.modal-content.top {
+  animation: modal-slide-up-to-down 1s;
+}
+
+.modal-content.bottom {
+  animation: modal-slide-down-to-up 1s;
+}
+
+.modal-content.corner-top-left {
+  animation: modal-slide-left-to-right 1s;
+}
+
+.modal-content.corner-top-right {
+  animation: modal-slide-right-to-left 1s;
+}
+
+.modal-content.corner-bottom-left {
+  animation: modal-slide-left-to-right 1s;
+}
+
+.modal-content.corner-bottom-right {
+  animation: modal-slide-right-to-left 1s;
+}
+
+@keyframes modal-disappear {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes modal-appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes modal-slide-up-to-down {
+  0% {
+    transform: translateY(-500px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes modal-slide-down-to-up {
+  0% {
+    transform: translateY(500px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes modal-slide-left-to-right {
+  0% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes modal-slide-right-to-left {
+  0% {
+    transform: translateX(500px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .modal-content {
   background-color: #282828;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 40%;
+  padding: 5px 25px;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +135,8 @@
   border-radius: 25px;
   position: relative;
   overflow: hidden;
+  margin: 20px;
+  animation: modal-appear 1s;
 }
 
 .modal-content span {
@@ -41,7 +152,7 @@
 
 .title {
   all: unset;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: white;
   font-family: "Raleway";
   padding-top: 20px;
@@ -50,9 +161,10 @@
 
 .commentary {
   all: unset;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: rgba(255, 255, 255, 0.8);
   padding: 5px 0 20px 0;
+  font-family: "Inter";
 }
 
 .timer-bar {
